--- a/menu1.html
+++ b/menu1.html
@@ -16,7 +16,7 @@
     </header>
 
     <section>
-        <div class="image"></div>
+        <img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
         <div class="menu">
             <h2>La palette du goût</h2>
 
@@ -25,7 +25,7 @@
             <div class="starter">
                 <p class="title">Fricassée d'escargot</p>
                 <div class="details">
-                    <span class="precision">Au pimet d'espelette</span>
+                    <span class="precision">Au piment d'espelette</span>
                     <span class="price">25€</span>
                 </div>
             </div>
