modifications rem -> em

--- a/menu3.html
+++ b/menu3.html
@@ -7,96 +7,189 @@
     <title>A la française</title>
     <link rel="index" href="index.html">
     <link rel="stylesheet" href="./public/css/menu1.css">
+    <script src="https://kit.fontawesome.com/fffc96f8f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <span class="return-to-index"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></span>
+        <span class="return-to-index"><a href="index.html"><i class="fas fa-arrow-left"></i></a></span>
         <span class="logo">ohmyfood</span>
     </header>
 
     <section>
-        <img src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A la française" title="A la française"/>
+        <img class= "image" src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="Restaurant A la française" title="A la française"/>
         <div class="menu">
-            <h2>À la française</h2>
-
+            <div class="title_menu">
+                <h2>À la française</h2>
+                <div class="heart">
+                    <?xml version="1.0" encoding="iso-8859-1"?>
+                    <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         viewBox="-15 0 540 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                                c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                C512,93.417,453.532,30,376,30z"/>
+                        </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    </svg>
+                </div>
+            </div>
+            
             <h3>Entrées</h3>
 
-            <div class="starter">
-                <p class="title">Tartare de poulpe acidulé</p>
-                <div class="details">
-                    <span class="precision">Aux zestes d'orange</span>
-                    <span class="price">25€</span>
+            <div class="starter entree1 plat">
+                <div class="text_info">
+                    <p class="title">Tartare de poulpe acidulé</p>
+                    <div class="details">
+                        <div class="precision">Aux zestes d'orange</div>
+                        <span class="price">25€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="starter">
-                <p class="title">Velouté de légumes d'antan</p>
-                <div class="details">
-                    <span class="precision">Carotte, panais, topinambour</span>
-                    <span class="price">35€</span>
+            <div class="starter entree2 plat">
+                <div class="text_info">
+                    <p class="title">Velouté de légumes d'antan</p>
+                    <div class="details">
+                        <div class="precision">Carotte, panais, topinambour</div>
+                        <span class="price">35€</span>
+                    </div>
                 </div>
-
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                </div>
             </div>
 
-            <div class="starter">
-                <p class="title">Soupe à l'oignon</p>
-                <div class="details">
-                    <span class="precision">Revisitée</span>
-                    <span class="price">20€</span>
+            <div class="starter entree3 plat">
+                <div class="text_info">
+                    <p class="title">Soupe à l'oignon</p>
+                    <div class="details">
+                        <div class="precision">Revisitée</div>
+                        <span class="price">20€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
             <h3>Plats</h3>
 
-            <div class="main-course">
-                <p class="title">Coquilles Saint-Jacques</p>
-                <div class="details">
-                    <span class="precision">Accompagnées d'une purée de panais</span>
-                    <span class="price">40€</span>
+            <div class="main-course plat1 plat">
+                <div class="text_info">
+                    <p class="title">Coquilles Saint-Jacques</p>
+                    <div class="details">
+                        <div class="precision">Accompagnées d'une purée de panais</div>
+                        <span class="price">40€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="main-course">
-                <p class="title">Magret de canard</p>
-                <div class="details">
-                    <span class="precision">Et parmentier de pommes de terre</span>
-                    <span class="price">35€</span>
+            <div class="main-course plat2 plat">
+                <div class="text_info">
+                    <p class="title">Magret de canard</p>
+                    <div class="details">
+                        <div class="precision">Et parmentier de pommes de terre</div>
+                        <span class="price">35€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="main-course">
-                <p class="title">Pigeonneau d’Ille-et-Vilaine</p>
-                <div class="details">
-                    <span class="precision">Sur son lit de gnocchis aux légumes</span>
-                    <span class="price">44€</span>
+            <div class="main-course plat3 plat">
+                <div class="text_info">
+                    <p class="title">Pigeonneau d’Ille-et-Vilaine</p>
+                    <div class="details">
+                        <div class="precision">Sur son lit de gnocchis aux légumes</div>
+                        <span class="price">44€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
 
             <h3>Desserts</h3>
 
-            <div class="dessert">
-                <p class="title">Pétales de violettes glacés</p>
-                <div class="details">
-                    <span class="precision">Et purée de noisettes</span>
-                    <span class="price">18€</span>
+            <div class="dessert douceur1 plat">
+                <div class="text_info">
+                    <p class="title">Pétales de violettes glacés</p>
+                    <div class="details">
+                        <div class="precision">Et purée de noisettes</div>
+                        <span class="price">18€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="dessert">
-                <p class="title">Fondant au chocolat</p>
-                <div class="details">
-                    <span class="precision">Revisité</span>
-                    <span class="price">22€</span>
+            <div class="dessert douceur2 plat">
+                <div class="text_info">
+                    <p class="title">Fondant au chocolat</p>
+                    <div class="details">
+                        <div class="precision">Revisité</div>
+                        <span class="price">22€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="dessert">
-                <p class="title">Millefeuille croustillant</p>
-                <div class="details">
-                    <span class="precision">Myrtilles et pâte d’amande</span>
-                    <span class="price">23€ </span>
+            <div class="dessert douceur3 plat">
+                <div class="text_info">
+                    <p class="title">Millefeuille croustillant</p>
+                    <div class="details">
+                        <div class="precision">Myrtilles et pâte d’amande</div>
+                        <span class="price">23€ </span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
