--- a/menu1.html
+++ b/menu1.html
@@ -7,103 +7,192 @@
     <title>La palette du goût</title>
     <link rel="index" href="index.html">
     <link rel="stylesheet" href="./public/css/menu1.css">
+    <script src="https://kit.fontawesome.com/fffc96f8f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <span class="return-to-index"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></span>
+        <span class="return-to-index"><a href="index.html"><i class="fas fa-arrow-left"></i></a></span>
         <span class="logo">ohmyfood</span>
     </header>
 
     <section>
-        <img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg">
+        <img class="image" src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="Restaurant La palette du goût" title="La palette du goût">
         <div class="menu">
-            <h2>La palette du goût</h2>
+            <div class="title_menu">
+                <h2>La palette du goût</h2>
+                <div class="heart">
+                    <?xml version="1.0" encoding="iso-8859-1"?>
+                    <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         viewBox="-15 0 540 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                                c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                C512,93.417,453.532,30,376,30z"/>
+                        </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    </svg>
+                </div>
+            </div>
 
             <h3>Entrées</h3>
-
-            <div class="starter">
-                <p class="title">Fricassée d'escargot</p>
-                <div class="details">
-                    <span class="precision">Au piment d'espelette</span>
-                    <span class="price">25€</span>
+            <div class="first">
+                <div class="starter entree1 plat">
+                    <div class="text_info">
+                        <p class="title">Fricassée d'escargot</p>
+                        <div class="details">
+                            <div class="precision">Au piment d'espelette</div>
+                            <span class="price">25€</span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    </div>
+                </div>        
+                <div class="starter entree2 plat">
+                    <div class="text_info">
+                        <p class="title">Foie gras de canard mi-cuit</p>
+                        <div class="details">
+                            <div class="precision">Et ses copeaux de truffe noire</div>
+                            <span class="price">35€</span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    </div>
                 </div>
-            </div>
-
-            <div class="starter">
-                <p class="title">Foie gras de canard mi-cuit</p>
-                <div class="details">
-                    <span class="precision">Et ses copeaux de truffe noire</span>
-                    <span class="price">35€</span>
-                </div>
-            </div>
-
-            <div class="starter">
-                <p class="title">Oeuf au plat</p>
-                <div class="details">
-                    <span class="precision">Assaisonné à la truffe sur lit de caviar</span>
-                    <span class="price">20€</span>
+                <div class="starter entree3 plat">
+                    <div class="text_info">
+                        <p class="title">Oeuf au plat</p>
+                        <div class="details">
+                            <div class="precision">Assaisonné à la truffe sur lit de caviar</div>
+                            <span class="price">20€</span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    </div>
                 </div>
             </div>
 
             <h3>Plats</h3>
-
-            <div class="main-course">
-                <div class="text_info">
-                    <p class="title">Filet de boeuf aux herbes</p>
-                    <div class="details">
-                        <span class="precision">Accompagné de sa ribambelle de légumes</span>
-                        <span class="price">40€</span>
+            <div class="second">
+                <div class="main-course plat1 plat">
+                    <div class="text_info">
+                        <p class="title">Filet de boeuf aux herbes</p>
+                        <div class="details">
+                            <div class="precision">Accompagné de sa ribambelle de légumes</div>
+                            <span class="price">40€</span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
+
+                <div class="main-course plat2 plat">
+                    <div class="text_info">
+                        <p class="title">Parmentier de queue de boeuf</p>
+                        <div class="details">
+                            <div class="precision">À la truffe noire sur sa purée de panais</div>
+                            <span class="price">35€</span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    </div>
+                </div>
+
+                <div class="main-course plat3 plat">
+                    <div class="text_info">
+                        <p class="title">Filet de turbot</p>
+                        <div class="details">
+                            <div class="precision">Aux agrumes</div>
+                            <span class="price">44€</span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    </div>
                 </div>
             </div>
-
-            <div class="main-course">
-                <p class="title">Parmentier de queue de boeuf</p>
-                <div class="details">
-                    <span class="precision">À la truffe noire sur sa purée de panais</span>
-                    <span class="price">35€</span>
-                </div>
-            </div>
-
-            <div class="main-course">
-                <p class="title">Filet de turbot</p>
-                <div class="details">
-                    <span class="precision">Aux agrumes</span>
-                    <span class="price">44€</span>
-                </div>
-            </div>
-
 
             <h3>Desserts</h3>
+            <div class="third">
+                <div class="dessert douceur1 plat">
+                    <div class="text_info">
+                        <p class="title">Paris-Brest</p>
+                        <div class="details">
+                            <div class="precision">Revisité</div>
+                            <span class="price">18€</span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    </div>
+                </div>
 
-            <div class="dessert">
-                <p class="title">Paris-Brest</p>
-                <div class="details">
-                    <span class="precision">Revisité</span>
-                    <span class="price">18€</span>
+                <div class="dessert douceur2 plat">
+                    <div class="text_info">
+                        <p class="title">Macaron au chocolat d'exception</p>
+                        <div class="details">
+                            <div class="precision">Et glace à la vanille de Madagascar</div>
+                            <span class="price">22€</span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    </div>
+                </div>
+
+                <div class="dessert douceur3 plat">
+                    <div class="text_info">
+                        <p class="title"> Mousse au chocolat</p>
+                        <div class="details">
+                            <div class="precision">Au piment d'Espelette et à la truffe noire</div>
+                            <span class="price">23€ </span>
+                        </div>
+                    </div>
+                    <div class="text_choose">
+                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    </div>
                 </div>
             </div>
-
-            <div class="dessert">
-                <p class="title">Macaron au chocolat d'exception</p>
-                <div class="details">
-                    <span class="precision">Et glace à la vanille de Madagascar</span>
-                    <span class="price">22€</span>
-                </div>
-            </div>
-
-            <div class="dessert">
-                <p class="title"> Mousse au chocolat</p>
-                <div class="details">
-                    <span class="precision">Au piment d'Espelette et à la truffe noire</span>
-                    <span class="price">23€ </span>
-                </div>
-            </div>
-
+            
             <div class="order-btn">
                 <button type="submit">Commander</button>
             </div>
