--- a/menu2.html
+++ b/menu2.html
@@ -7,103 +7,201 @@
     <title>La note enchantée</title>
     <link rel="index" href="index.html">
     <link rel="stylesheet" href="./public/css/menu1.css">
+    <script src="https://kit.fontawesome.com/fffc96f8f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <span class="return-to-index"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></span>
+        <span class="return-to-index"><a href="index.html"><i class="fas fa-arrow-left"></i></a></span>
         <span class="logo">ohmyfood</span>
     </header>
 
     <section>
-        <img src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée" title="La note enchantée"/>
+        <img class="image" src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Restaurant La note enchantée" title="La note enchantée"/>
         <div class="menu">
-            <h2>La note enchantée</h2>
-
+            <div class="title_menu">
+                <h2>La note enchantée</h2>
+                <div class="heart">
+                    <?xml version="1.0" encoding="iso-8859-1"?>
+                    <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         viewBox="-15 0 540 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                                c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                C512,93.417,453.532,30,376,30z"/>
+                        </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    </svg>
+                </div>
+            </div>
+            
             <h3>Entrées</h3>
-
-            <div class="starter">
-                <p class="title">Ravioles de foie gras</p>
-                <div class="details">
-                    <span class="precision">Accompagnés de leur crème à la truffe</span>
-                    <span class="price">25€</span>
+            <div class="starter entree1 plat">
+                <div class="text_info">
+                    <p class="title">Ravioles de foie gras</p>
+                    <div class="details">
+                        <div class="precision">Accompagnés de leur crème à la truffe</div>
+                        <span class="price">25€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="starter">
-                <p class="title">Caviar osciètre</p>
-                <div class="details">
-                    <span class="precision">Sur blini à la farine de blé noir</span>
-                    <span class="price">35€</span>
+            <div class="starter entree2 plat">
+                <div class="text_info">
+                    <p class="title">Caviar osciètre</p>
+                    <div class="details">
+                        <div class="precision">Sur blini à la farine de blé noir</div>
+                        <span class="price">35€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="starter">
-                <p class="title">Homard et espuma de potiron</p>
-                <div class="details">
-                    <span class="precision">Mariné aux zestes d'orange</span>
-                    <span class="price">20€</span>
+            <div class="starter entree3 plat">
+                <div class="text_info">
+                    <p class="title">Homard et espuma de potiron</p>
+                    <div class="details">
+                        <div class="precision">Mariné aux zestes d'orange</div>
+                        <span class="price">20€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="starter">
-                <p class="title">Foie gras de canard cuit entier</p>
-                <div class="details">
-                    <span class="precision">Confiture de figue et pain toasté</span>
-                    <span class="price">35€</span>
+            <div class="starter entree4 plat">
+                <div class="text_info">
+                    <p class="title">Foie gras de canard cuit entier</p>
+                    <div class="details">
+                        <div class="precision">Confiture de figue et pain toasté</div>
+                        <span class="price">35€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
             <h3>Plats</h3>
 
-            <div class="main-course">
-                <p class="title">Noix de coquilles Saint-Jacques</p>
-                <div class="details">
-                    <span class="precision">Sur lit de purée de céleri-rave</span>
-                    <span class="price">40€</span>
+            <div class="main-course plat1 plat">
+                <div class="text_info">
+                    <p class="title">Noix de coquilles Saint-Jacques</p>
+                    <div class="details">
+                        <div class="precision">Sur lit de purée de céleri-rave</div>
+                        <span class="price">40€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="main-course">
-                <p class="title">Langoustine poêlée</p>
-                <div class="details">
-                    <span class="precision">Purée de patate douce</span>
-                    <span class="price">35€</span>
+            <div class="main-course plat2 plat">
+                <div class="text_info">
+                    <p class="title">Langoustine poêlée</p>
+                    <div class="details">
+                        <div class="precision">Purée de patate douce</div>
+                        <span class="price">35€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="main-course">
-                <p class="title">Mijoté de queue de boeuf </p>
-                <div class="details">
-                    <span class="precision">Et riz sauvage aux zestes de citron</span>
-                    <span class="price">44€</span>
+            <div class="main-course plat3 plat">
+                <div class="text_info">
+                    <p class="title">Mijoté de queue de boeuf </p>
+                    <div class="details">
+                        <div class="precision">Et riz sauvage aux zestes de citron</div>
+                        <span class="price">44€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
 
             <h3>Desserts</h3>
 
-            <div class="dessert">
-                <p class="title">Macaron noisette et chocolat</p>
-                <div class="details">
-                    <span class="precision">Glace au caramel brun et sel de Guérande</span>
-                    <span class="price">18€</span>
+            <div class="dessert douceur1 plat">
+                <div class="text_info">
+                    <p class="title">Macaron noisette et chocolat</p>
+                    <div class="details">
+                        <div class="precision">Glace au caramel brun et sel de Guérande</div>
+                        <span class="price">18€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="dessert">
-                <p class="title">Baba au rhum revisité</p>
-                <div class="details">
-                    <span class="precision">Avec son coulis de citron</span>
-                    <span class="price">22€</span>
+            <div class="dessert douceur2 plat">
+                <div class="text_info">
+                    <p class="title">Baba au rhum revisité</p>
+                    <div class="details">
+                        <div class="precision">Avec son coulis de citron</div>
+                        <span class="price">22€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="dessert">
-                <p class="title">Tarte au citron meringuée</p>
-                <div class="details">
-                    <span class="precision">Déstructurée</span>
-                    <span class="price">23€ </span>
+            <div class="dessert douceur3 plat">
+                <div class="text_info">
+                    <p class="title">Tarte au citron meringuée</p>
+                    <div class="details">
+                        <div class="precision">Déstructurée</div>
+                        <span class="price">23€ </span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
