--- a/menu4.html
+++ b/menu4.html
@@ -7,95 +7,189 @@
     <title>Le délice des sens</title>
     <link rel="index" href="index.html">
     <link rel="stylesheet" href="./public/css/menu1.css">
+    <script src="https://kit.fontawesome.com/fffc96f8f9.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <span class="return-to-index"><a href="index.html"><i class="fa-solid fa-arrow-left"></i></a></span>
+        <span class="return-to-index"><a href="index.html"><i class="fas fa-arrow-left"></i></a></span>
         <span class="logo">ohmyfood</span>
     </header>
 
     <section>
-        <img src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens" title="Le délice des sens"/>
+        <img class="image" src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="Restaurant Le délice des sens" title="Le délice des sens"/>
         <div class="menu">
-            <h2>Le délice des sens</h2>
-
+            <div class="title_menu">
+                <h2>Le délice des sens</h2>
+                <div class="heart">
+                    <?xml version="1.0" encoding="iso-8859-1"?>
+                    <!-- Generator: Adobe Illustrator 19.0.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
+                    <svg version="1.1" id="Capa_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                         viewBox="-15 0 540 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                    <g>
+                        <g>
+                            <path d="M376,30c-27.783,0-53.255,8.804-75.707,26.168c-21.525,16.647-35.856,37.85-44.293,53.268
+                                c-8.437-15.419-22.768-36.621-44.293-53.268C189.255,38.804,163.783,30,136,30C58.468,30,0,93.417,0,177.514
+                                c0,90.854,72.943,153.015,183.369,247.118c18.752,15.981,40.007,34.095,62.099,53.414C248.38,480.596,252.12,482,256,482
+                                s7.62-1.404,10.532-3.953c22.094-19.322,43.348-37.435,62.111-53.425C439.057,330.529,512,268.368,512,177.514
+                                C512,93.417,453.532,30,376,30z"/>
+                        </g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    <g>
+                    </g>
+                    </svg>
+                </div>
+            </div>
+            
             <h3>Entrées</h3>
 
-            <div class="starter">
-                <p class="title">Tartare de thon</p>
-                <div class="details">
-                    <span class="precision">Assaisonné au yuzu</span>
-                    <span class="price">25€</span>
+            <div class="starter entree1 plat">
+                <div class="text_info">
+                    <p class="title">Tartare de thon</p>
+                    <div class="details">
+                        <div class="precision">Assaisonné au yuzu</div>
+                        <span class="price">25€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="starter">
-                <p class="title">Bouchée de homard croustillant </p>
-                <div class="details">
-                    <span class="precision">Et sa farandole de petits légumes</span>
-                    <span class="price">35€</span>
+            <div class="starter entree2 plat">
+                <div class="text_info">
+                    <p class="title">Bouchée de homard croustillant </p>
+                    <div class="details">
+                        <div class="precision">Et sa farandole de petits légumes</div>
+                        <span class="price">35€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="starter">
-                <p class="title">Velouté de cèpes</p>
-                <div class="details">
-                    <span class="precision">Aux truffes</span>
-                    <span class="price">20€</span>
+            <div class="starter entree3 plat">
+                <div class="text_info">
+                    <p class="title">Velouté de cèpes</p>
+                    <div class="details">
+                        <div class="precision">Aux truffes</div>
+                        <span class="price">20€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
             <h3>Plats</h3>
 
-            <div class="main-course">
-                <p class="title">Poulet rôti aux herbes de Provence</p>
-                <div class="details">
-                    <span class="precision">Et sa crème de truffe</span>
-                    <span class="price">40€</span>
+            <div class="main-course plat1 plat">
+                <div class="text_info">
+                    <p class="title">Poulet rôti aux herbes de Provence</p>
+                    <div class="details">
+                        <div class="precision">Et sa crème de truffe</div>
+                        <span class="price">40€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="main-course">
-                <p class="title">Langouste rôtie</p>
-                <div class="details">
-                    <span class="precision">Et ses légumes de saison</span>
-                    <span class="price">35€</span>
+            <div class="main-course plat2 plat">
+                <div class="text_info">
+                    <p class="title">Langouste rôtie</p>
+                    <div class="details">
+                        <div class="precision">Et ses légumes de saison</div>
+                        <span class="price">35€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="main-course">
-                <p class="title">Côte de boeuf Angus</p>
-                <div class="details">
-                    <span class="precision">Et sa purée de panais</span>
-                    <span class="price">44€</span>
+            <div class="main-course plat3 plat">
+                <div class="text_info">
+                    <p class="title">Côte de boeuf Angus</p>
+                    <div class="details">
+                        <div class="precision">Et sa purée de panais</div>
+                        <span class="price">44€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
 
             <h3>Desserts</h3>
 
-            <div class="dessert">
-                <p class="title">Farandole de desserts</p>
-                <div class="details">
-                    <span class="precision">Du chef</span>
-                    <span class="price">18€</span>
+            <div class="dessert douceur1 plat">
+                <div class="text_info">
+                    <p class="title">Farandole de desserts</p>
+                    <div class="details">
+                        <div class="precision">Du chef</div>
+                        <span class="price">18€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="dessert">
-                <p class="title">Crème brulée</p>
-                <div class="details">
-                    <span class="precision">Revisitée</span>
-                    <span class="price">22€</span>
+            <div class="dessert douceur2 plat">
+                <div class="text_info">
+                    <p class="title">Crème brûlée</p>
+                    <div class="details">
+                        <div class="precision">Revisitée</div>
+                        <span class="price">22€</span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
-            <div class="dessert">
-                <p class="title">Tiramisu</p>
-                <div class="details">
-                    <span class="precision">À la noisette</span>
-                    <span class="price">23€ </span>
+            <div class="dessert douceur3 plat">
+                <div class="text_info">
+                    <p class="title">Tiramisu</p>
+                    <div class="details">
+                        <div class="precision">À la noisette</div>
+                        <div class="price">23€ </span>
+                    </div>
+                </div>
+                <div class="text_choose">
+                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
                 </div>
             </div>
 
