correction checkbox verte - version mobile

--- a/menu1.html
+++ b/menu1.html
@@ -74,37 +74,31 @@
                 <div class="starter entree1 plat">
                     <div class="text_info">
                         <p class="title">Fricassée d'escargot</p>
-                        <div class="details">
-                            <div class="precision">Au piment d'espelette</div>
-                            <span class="price">25€</span>
-                        </div>
+                        <p class="precision">Au piment d'espelette</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">25€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>        
                 <div class="starter entree2 plat">
                     <div class="text_info">
                         <p class="title">Foie gras de canard mi-cuit</p>
-                        <div class="details">
-                            <div class="precision">Et ses copeaux de truffe noire</div>
-                            <span class="price">35€</span>
-                        </div>
+                        <p class="precision">Et ses copeaux de truffe noire</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
                 <div class="starter entree3 plat">
                     <div class="text_info">
                         <p class="title">Oeuf au plat</p>
-                        <div class="details">
-                            <div class="precision">Assaisonné à la truffe sur lit de caviar</div>
-                            <span class="price">20€</span>
-                        </div>
+                        <p class="precision">Assaisonné à la truffe sur lit de caviar</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">20€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
             </div>
@@ -114,39 +108,33 @@
                 <div class="main-course plat1 plat">
                     <div class="text_info">
                         <p class="title">Filet de boeuf aux herbes</p>
-                        <div class="details">
-                            <div class="precision">Accompagné de sa ribambelle de légumes</div>
-                            <span class="price">40€</span>
-                        </div>
+                        <p class="precision">Accompagné de sa ribambelle de légumes</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">40€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
 
                 <div class="main-course plat2 plat">
                     <div class="text_info">
                         <p class="title">Parmentier de queue de boeuf</p>
-                        <div class="details">
-                            <div class="precision">À la truffe noire sur sa purée de panais</div>
-                            <span class="price">35€</span>
-                        </div>
+                        <p class="precision">À la truffe noire sur sa purée de panais</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
 
                 <div class="main-course plat3 plat">
                     <div class="text_info">
                         <p class="title">Filet de turbot</p>
-                        <div class="details">
-                            <div class="precision">Aux agrumes</div>
-                            <span class="price">44€</span>
-                        </div>
+                        <p class="precision">Aux agrumes</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">44€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
             </div>
@@ -156,39 +144,33 @@
                 <div class="dessert douceur1 plat">
                     <div class="text_info">
                         <p class="title">Paris-Brest</p>
-                        <div class="details">
-                            <div class="precision">Revisité</div>
-                            <span class="price">18€</span>
-                        </div>
+                        <p class="precision">Revisité</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">18€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
 
                 <div class="dessert douceur2 plat">
                     <div class="text_info">
                         <p class="title">Macaron au chocolat d'exception</p>
-                        <div class="details">
-                            <div class="precision">Et glace à la vanille de Madagascar</div>
-                            <span class="price">22€</span>
-                        </div>
+                        <p class="precision">Et glace à la vanille de Madagascar</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">22€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
 
                 <div class="dessert douceur3 plat">
                     <div class="text_info">
                         <p class="title"> Mousse au chocolat</p>
-                        <div class="details">
-                            <div class="precision">Au piment d'Espelette et à la truffe noire</div>
-                            <span class="price">23€ </span>
-                        </div>
+                        <p class="precision">Au piment d'Espelette et à la truffe noire</p>
                     </div>
                     <div class="text_choose">
-                        <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                        <div class="price">23€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
             </div>
