--- a/menu2.html
+++ b/menu2.html
@@ -70,141 +70,125 @@
             </div>
             
             <h3>Entrées</h3>
-            <div class="starter entree1 plat">
-                <div class="text_info">
-                    <p class="title">Ravioles de foie gras</p>
-                    <div class="details">
-                        <div class="precision">Accompagnés de leur crème à la truffe</div>
-                        <span class="price">25€</span>
+            <div class="first">
+                <div class="starter entree1 plat">
+                    <div class="text_info">
+                        <p class="title">Ravioles de foie gras</p>
+                        <p class="precision">Accompagnés de leur crème à la truffe</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">25€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="starter entree2 plat">
-                <div class="text_info">
-                    <p class="title">Caviar osciètre</p>
-                    <div class="details">
-                        <div class="precision">Sur blini à la farine de blé noir</div>
-                        <span class="price">35€</span>
+                <div class="starter entree2 plat">
+                    <div class="text_info">
+                        <p class="title">Caviar osciètre</p>
+                        <p class="precision">Sur blini à la farine de blé noir</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="starter entree3 plat">
-                <div class="text_info">
-                    <p class="title">Homard et espuma de potiron</p>
-                    <div class="details">
-                        <div class="precision">Mariné aux zestes d'orange</div>
-                        <span class="price">20€</span>
+                <div class="starter entree3 plat">
+                    <div class="text_info">
+                        <p class="title">Homard et espuma de potiron</p>
+                        <p class="precision">Mariné aux zestes d'orange</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">20€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="starter entree4 plat">
-                <div class="text_info">
-                    <p class="title">Foie gras de canard cuit entier</p>
-                    <div class="details">
-                        <div class="precision">Confiture de figue et pain toasté</div>
-                        <span class="price">35€</span>
+                <div class="starter entree4 plat">
+                    <div class="text_info">
+                        <p class="title">Foie gras de canard cuit entier</p>
+                        <p class="precision">Confiture de figue et pain toasté</p>
                     </div>
-                </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    <div class="text_choose">
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
             </div>
 
             <h3>Plats</h3>
 
-            <div class="main-course plat1 plat">
-                <div class="text_info">
-                    <p class="title">Noix de coquilles Saint-Jacques</p>
-                    <div class="details">
-                        <div class="precision">Sur lit de purée de céleri-rave</div>
-                        <span class="price">40€</span>
+            <div class="second">
+                <div class="main-course plat1 plat">
+                    <div class="text_info">
+                        <p class="title">Noix de coquilles Saint-Jacques</p>
+                        <p class="precision">Sur lit de purée de céleri-rave</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">40€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="main-course plat2 plat">
-                <div class="text_info">
-                    <p class="title">Langoustine poêlée</p>
-                    <div class="details">
-                        <div class="precision">Purée de patate douce</div>
-                        <span class="price">35€</span>
+                <div class="main-course plat2 plat">
+                    <div class="text_info">
+                        <p class="title">Langoustine poêlée</p>
+                        <p class="precision">Purée de patate douce</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="main-course plat3 plat">
-                <div class="text_info">
-                    <p class="title">Mijoté de queue de boeuf </p>
-                    <div class="details">
-                        <div class="precision">Et riz sauvage aux zestes de citron</div>
-                        <span class="price">44€</span>
+                <div class="main-course plat3 plat">
+                    <div class="text_info">
+                        <p class="title">Mijoté de queue de boeuf </p>
+                        <p class="precision">Et riz sauvage aux zestes de citron</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">44€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
             </div>
-
 
             <h3>Desserts</h3>
-
-            <div class="dessert douceur1 plat">
-                <div class="text_info">
-                    <p class="title">Macaron noisette et chocolat</p>
-                    <div class="details">
-                        <div class="precision">Glace au caramel brun et sel de Guérande</div>
-                        <span class="price">18€</span>
+            <div class="third">
+                <div class="dessert douceur1 plat">
+                    <div class="text_info">
+                        <p class="title">Macaron noisette et chocolat</p>
+                        <p class="precision">Glace au caramel brun et sel de Guérande</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">18€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="dessert douceur2 plat">
-                <div class="text_info">
-                    <p class="title">Baba au rhum revisité</p>
-                    <div class="details">
-                        <div class="precision">Avec son coulis de citron</div>
-                        <span class="price">22€</span>
+                <div class="dessert douceur2 plat">
+                    <div class="text_info">
+                        <p class="title">Baba au rhum revisité</p>
+                        <p class="precision">Avec son coulis de citron</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">22€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="dessert douceur3 plat">
-                <div class="text_info">
-                    <p class="title">Tarte au citron meringuée</p>
-                    <div class="details">
-                        <div class="precision">Déstructurée</div>
-                        <span class="price">23€ </span>
+                <div class="dessert douceur3 plat">
+                    <div class="text_info">
+                        <p class="title">Tarte au citron meringuée</p>
+                        <p class="precision">Déstructurée</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">23€ </div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
             </div>
-
+            
             <div class="order-btn">
                 <button type="submit">Commander</button>
             </div>
