--- a/menu3.html
+++ b/menu3.html
@@ -70,129 +70,113 @@
             </div>
             
             <h3>Entrées</h3>
-
-            <div class="starter entree1 plat">
-                <div class="text_info">
-                    <p class="title">Tartare de poulpe acidulé</p>
-                    <div class="details">
-                        <div class="precision">Aux zestes d'orange</div>
-                        <span class="price">25€</span>
+            <div class="first">
+                <div class="starter entree1 plat">
+                    <div class="text_info">
+                        <p class="title">Tartare de poulpe acidulé</p>
+                        <p class="precision">Aux zestes d'orange</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">25€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="starter entree2 plat">
-                <div class="text_info">
-                    <p class="title">Velouté de légumes d'antan</p>
-                    <div class="details">
-                        <div class="precision">Carotte, panais, topinambour</div>
-                        <span class="price">35€</span>
+                <div class="starter entree2 plat">
+                    <div class="text_info">
+                        <p class="title">Velouté de légumes d'antan</p>
+                        <p class="precision">Carotte, panais, topinambour</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="starter entree3 plat">
-                <div class="text_info">
-                    <p class="title">Soupe à l'oignon</p>
-                    <div class="details">
-                        <div class="precision">Revisitée</div>
-                        <span class="price">20€</span>
+                <div class="starter entree3 plat">
+                    <div class="text_info">
+                        <p class="title">Soupe à l'oignon</p>
+                        <p class="precision">Revisitée</p>
                     </div>
-                </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    <div class="text_choose">
+                        <div class="price">20€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
             </div>
 
             <h3>Plats</h3>
-
-            <div class="main-course plat1 plat">
-                <div class="text_info">
-                    <p class="title">Coquilles Saint-Jacques</p>
-                    <div class="details">
-                        <div class="precision">Accompagnées d'une purée de panais</div>
-                        <span class="price">40€</span>
+            <div class="second">
+                <div class="main-course plat1 plat">
+                    <div class="text_info">
+                        <p class="title">Coquilles Saint-Jacques</p>
+                        <p class="precision">Accompagnées d'une purée de panais</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">40€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="main-course plat2 plat">
-                <div class="text_info">
-                    <p class="title">Magret de canard</p>
-                    <div class="details">
-                        <div class="precision">Et parmentier de pommes de terre</div>
-                        <span class="price">35€</span>
+                <div class="main-course plat2 plat">
+                    <div class="text_info">
+                        <p class="title">Magret de canard</p>
+                        <p class="precision">Et parmentier de pommes de terre</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="main-course plat3 plat">
-                <div class="text_info">
-                    <p class="title">Pigeonneau d’Ille-et-Vilaine</p>
-                    <div class="details">
-                        <div class="precision">Sur son lit de gnocchis aux légumes</div>
-                        <span class="price">44€</span>
+                <div class="main-course plat3 plat">
+                    <div class="text_info">
+                        <p class="title">Pigeonneau d’Ille-et-Vilaine</p>
+                        <p class="precision">Sur son lit de gnocchis aux légumes</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">44€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
             </div>
-
 
             <h3>Desserts</h3>
-
-            <div class="dessert douceur1 plat">
-                <div class="text_info">
-                    <p class="title">Pétales de violettes glacés</p>
-                    <div class="details">
-                        <div class="precision">Et purée de noisettes</div>
-                        <span class="price">18€</span>
+            <div class="third">
+                <div class="dessert douceur1 plat">
+                    <div class="text_info">
+                        <p class="title">Pétales de violettes glacés</p>
+                        <p class="precision">Et purée de noisettes</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">18€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="dessert douceur2 plat">
-                <div class="text_info">
-                    <p class="title">Fondant au chocolat</p>
-                    <div class="details">
-                        <div class="precision">Revisité</div>
-                        <span class="price">22€</span>
+                <div class="dessert douceur2 plat">
+                    <div class="text_info">
+                        <p class="title">Fondant au chocolat</p>
+                        <p class="precision">Revisité</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">22€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="dessert douceur3 plat">
-                <div class="text_info">
-                    <p class="title">Millefeuille croustillant</p>
-                    <div class="details">
-                        <div class="precision">Myrtilles et pâte d’amande</div>
-                        <span class="price">23€ </span>
+                <div class="dessert douceur3 plat">
+                    <div class="text_info">
+                        <p class="title">Millefeuille croustillant</p>
+                        <p class="precision">Myrtilles et pâte d’amande</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">23€ </div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
             </div>
-
+            
             <div class="order-btn">
                 <button type="submit">Commander</button>
             </div>
