--- a/menu4.html
+++ b/menu4.html
@@ -71,125 +71,110 @@
             
             <h3>Entrées</h3>
 
-            <div class="starter entree1 plat">
-                <div class="text_info">
-                    <p class="title">Tartare de thon</p>
-                    <div class="details">
-                        <div class="precision">Assaisonné au yuzu</div>
-                        <span class="price">25€</span>
+            <div class="first">
+                <div class="starter entree1 plat">
+                    <div class="text_info">
+                        <p class="title">Tartare de thon</p>
+                        <p class="precision">Assaisonné au yuzu</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">25€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="starter entree2 plat">
-                <div class="text_info">
-                    <p class="title">Bouchée de homard croustillant </p>
-                    <div class="details">
-                        <div class="precision">Et sa farandole de petits légumes</div>
-                        <span class="price">35€</span>
+                <div class="starter entree2 plat">
+                    <div class="text_info">
+                        <p class="title">Bouchée de homard croustillant </p>
+                        <p class="precision">Et sa farandole de petits légumes</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="starter entree3 plat">
-                <div class="text_info">
-                    <p class="title">Velouté de cèpes</p>
-                    <div class="details">
-                        <div class="precision">Aux truffes</div>
-                        <span class="price">20€</span>
+                <div class="starter entree3 plat">
+                    <div class="text_info">
+                        <p class="title">Velouté de cèpes</p>
+                        <p class="precision">Aux truffes</p>
                     </div>
-                </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    <div class="text_choose">
+                        <div class="price">20€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
             </div>
 
             <h3>Plats</h3>
-
-            <div class="main-course plat1 plat">
-                <div class="text_info">
-                    <p class="title">Poulet rôti aux herbes de Provence</p>
-                    <div class="details">
-                        <div class="precision">Et sa crème de truffe</div>
-                        <span class="price">40€</span>
+            <div class="second">
+                <div class="main-course plat1 plat">
+                    <div class="text_info">
+                        <p class="title">Poulet rôti aux herbes de Provence</p>
+                        <p class="precision">Et sa crème de truffe</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">40€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="main-course plat2 plat">
-                <div class="text_info">
-                    <p class="title">Langouste rôtie</p>
-                    <div class="details">
-                        <div class="precision">Et ses légumes de saison</div>
-                        <span class="price">35€</span>
+                <div class="main-course plat2 plat">
+                    <div class="text_info">
+                        <p class="title">Langouste rôtie</p>
+                        <p class="precision">Et ses légumes de saison</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">35€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="main-course plat3 plat">
-                <div class="text_info">
-                    <p class="title">Côte de boeuf Angus</p>
-                    <div class="details">
-                        <div class="precision">Et sa purée de panais</div>
-                        <span class="price">44€</span>
+                <div class="main-course plat3 plat">
+                    <div class="text_info">
+                        <p class="title">Côte de boeuf Angus</p>
+                        <p class="precision">Et sa purée de panais</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">44€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
             </div>
-
 
             <h3>Desserts</h3>
-
-            <div class="dessert douceur1 plat">
-                <div class="text_info">
-                    <p class="title">Farandole de desserts</p>
-                    <div class="details">
-                        <div class="precision">Du chef</div>
-                        <span class="price">18€</span>
+            <div class="third">
+                <div class="dessert douceur1 plat">
+                    <div class="text_info">
+                        <p class="title">Farandole de desserts</p>
+                        <p class="precision">Du chef</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">18€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="dessert douceur2 plat">
-                <div class="text_info">
-                    <p class="title">Crème brûlée</p>
-                    <div class="details">
-                        <div class="precision">Revisitée</div>
-                        <span class="price">22€</span>
+                <div class="dessert douceur2 plat">
+                    <div class="text_info">
+                        <p class="title">Crème brûlée</p>
+                        <p class="precision">Revisitée</p>
+                    </div>
+                    <div class="text_choose">
+                        <div class="price">22€</div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
                     </div>
                 </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
-                </div>
-            </div>
 
-            <div class="dessert douceur3 plat">
-                <div class="text_info">
-                    <p class="title">Tiramisu</p>
-                    <div class="details">
-                        <div class="precision">À la noisette</div>
-                        <div class="price">23€ </span>
+                <div class="dessert douceur3 plat">
+                    <div class="text_info">
+                        <p class="title">Tiramisu</p>
+                        <p class="precision">À la noisette</p>
                     </div>
-                </div>
-                <div class="text_choose">
-                    <span class="checkbox"><i class="far fa-check-circle"></i></span>
+                    <div class="text_choose">
+                        <div class="price">23€ </div>
+                        <div class="checkbox"><i class="far fa-check-circle"></i></div>
+                    </div>
                 </div>
             </div>
 
