corrections après passage au validateur - mais subsistent des erreurs (html: "heart")

--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@
                         </div>
                     </div>
                 </div>
+            </div>
         </section>
 
         <footer>
@@ -299,13 +300,13 @@
             <ul>
                 <li>
                     <i class="fas fa-utensils"></i>
-                    <a href><span>Proposer un restaurant</span></a>
+                    <a href="_blank"><span>Proposer un restaurant</span></a>
                 </li>
                 <li>
                     <i class="fas fa-hands-helping"></i>
-                    <a href><span>Devenir partenaire</span></a>
+                    <a href="_blank"><span>Devenir partenaire</span></a>
                 </li>
-                <li><a href>Mentions légales</a></li>
+                <li><a href="_blank">Mentions légales</a></li>
                 <li><a href="mailto:contact@mail.com">Contact</a></li>
             </ul>
         </footer>
