corrections post-soutenance

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
         <section class="reservation">
             <div class="location">
-                <i class="fa-solid fa-location-dot"></i><input type="text" value="Paris, Belleville">
+                <i class="fa fa-map-marker" aria-hidden="true"></i><input type="text" value="Paris, Belleville">
             </div>
 
             <div class="select_menu">
                 <h3>Réservez le menu qui vous convient.</h3>
-                <p>Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
+                <p class="decouvrez">Découvrez des restaurants d'exception, sélectionnés par nos soins.</p>
                 <button>Explorez nos restaurants</button>
             </div>
         </section>
